# Offboarding-System

./: .coverage  .dockerignore  .gitattributes  .gitignore  Dockerfile  InitializingBranch  README.md  docker-compose.yml  index.html  nginx.config  nginx_proxy.config  package.json  pnpm-lock.yaml  pyproject.toml
app/: main.py
app/assets/css/: style.css
app/assets/js/: audit_logs.js  offboarding.js  script.js  users_management.js
app/audit/: audit_action.py  audit_log_router.py  audit_log_service.py  audit_model.py  audit_serializer.py  log_schemas.py
app/audit/cleanup/: cleanup.py  cleanup_db.py  cleanup_files.py  retention.py  scheduler.py
app/audit/exporters/: __init__.py  audit_log_router.py  columns_map.py  csv_exporter.py  exporter_interface.py  jsonl_exporter.py  pdf_exporter.py  xlsx_exporter.py
app/config/: config.py
app/core/: __init__.py  config.py  database.py  deps.py  health.py  security.py
app/database/: __init__.py  database.py
app/enums/: __init__.py  actions_email.py  audit_action.py  audit_status.py  roles.py
app/infra/security/: __init__.py  security.py
app/integrations/: protocols.py
app/integrations/active_directory/: __init__.py  aduser_router.py  client.py  constants.py  deps.py  repository.py  schemas.py  service.py  utils.py
app/integrations/gate/: __init__.py  service.py
app/integrations/ifs/: schemas.py  service.py
app/integrations/intouch/: __init__.py  intouch_router.py  service.py
app/integrations/snipe_it/: __init__.py  schemas.py  service.py
app/models/: __init__.py  ad_user_model.py  audit_model.py  offboarding_model.py  user_model.py
app/modules/audit/: deps.py  enums.py  model.py  router.py  schemas.py  service.py
app/modules/offboarding/: enums.py  model.py  repository.py  router.py  schemas.py  service.py
app/modules/onboarding/: enums.py  model.py  repository.py  router.py  schemas.py  service.py
app/modules/shared/: __init__.py  email_actions.py  email_enums.py  email_service.py  model.py
app/modules/users/: __init__.py  deps.py  (+5 more)
app/routers/: aduser_router.py  audit_log_router.py  auth_router.py  execute_router.py  intouch_router.py  offboarding_router.py  system_router.py  user_router.py
app/schemas/: __init__.py  intouch_schemas.py  user_schemas.py
app/security/: __init__.py  deps.py  security.py  settings.py
app/services/: __init__.py  ad_service.py  audit_log_service.py  email_service.py  execute_service.py  intouch_service.py  offboarding_service.py  turnstiles_service.py
migrations/: env.py
migrations/versions/: 4d54e330fdd0_create_offboarding_tables.py  67cf1a2f571e_change_audit_log_user_id_to_uuid.py  894a742b9547_create_users_table.py  fb3de63d89e3_create_tables.py  fc3586699091_added_targets_column_in_audit_logs_.py
nginx/: Dockerfile  nginx_v1.conf
pages/: audit_logs.html  index.html  offboarding.html  users_management.html
test/: conftest.py  database.py  test_app.py  test_jwt.py  test_path_user.py  test_performance_search.py  test_user_route.py
(+23 files in other folders)
